# Python_Flask_Bulletin

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ai_review.yml
app/: __init__.py  extension.py
app/commands/: seed.py
app/controllers/: postcontroller.py
app/dao/: postdao.py
app/exceptions/: field_validator.py
app/requests/: authrequest.py  postrequest.py  userrequest.py
app/seeders/: user_seeder.py
app/services/: authservice.py  postservice.py
config/: cors.py  database.py  jwt.py  logging.py
scripts/: gemini_review.py
